[update to 3.1.2] SUNDIALS Release v3.1.2
commit 3bea69fccb5d5dc35ad030a1c05f27f316461530
Author: David J. Gardner <gardner48@llnl.gov>
Date:   Tue Jul 31 13:58:40 2018 -0700

    SUNDIALS Release v3.1.2

--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = sundials
-url = https://github.com/LLNL/sundials/releases/download/v3.1.1/sundials-3.1.1.tar.gz
+url = https://github.com/LLNL/sundials/archive/v3.1.2.tar.gz
 archives = 
 giturl = https://github.com/LLNL/sundials.git
 
