--- a/options.conf
+++ b/options.conf
@@ -1,8 +1,9 @@
 [package]
 name = sundials
-url = https://github.com/LLNL/sundials/archive/v4.1.0.tar.gz
+url = https://github.com/LLNL/sundials/archive/v5.0.0/sundials-5.0.0.tar.gz
 archives = 
 giturl = https://github.com/LLNL/sundials.git
+domain = 
 
 [autospec]
 # build 32 bit libraries
@@ -17,7 +18,7 @@ autoupdate = true
 broken_c++ = false
 # disable parallelization during build
 broken_parallel_build = false
-# this package is a library compatability package and only ships versioned library files
+# this package is a library compatibility package and only ships versioned library files
 compat = false
 # set conservative build flags
 conservative_flags = false
@@ -33,6 +34,8 @@ insecure_build = false
 keepstatic = false
 # do not require autostart subpackage
 no_autostart = false
+# do not generate debuginfo for this package
+nodebug = false
 # disable stripping binaries
 nostrip = false
 # optimize build for size over speed
@@ -52,7 +55,7 @@ use_avx512 = true
 # add clang flags
 use_clang = false
 # configure build for lto
-use_lto = false
+use_lto = true
 # require package verification for build
 verify_required = false
 
