--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = sundials
-url = https://github.com/LLNL/sundials/archive/v5.7.0/sundials-5.7.0.tar.gz
+url = https://github.com/LLNL/sundials/archive/v5.8.0/sundials-5.8.0.tar.gz
 archives = 
 giturl = https://github.com/LLNL/sundials.git
 domain = 
@@ -47,6 +47,8 @@ optimize_size = false
 pgo = false
 # set flags for security-sensitive builds
 security_sensitive = false
+# package is only used by servers
+server = false
 # do not run test suite
 skip_tests = false
 # add .so files to the lib package instead of dev
