--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = sundials
-url = https://github.com/LLNL/sundials/archive/v6.5.0/sundials-6.5.0.tar.gz
+url = https://github.com/LLNL/sundials/archive/v6.5.1/sundials-6.5.1.tar.gz
 archives = 
 giturl = https://github.com/LLNL/sundials.git
 domain = 
@@ -19,6 +19,8 @@ autoupdate = true
 broken_c++ = false
 # disable parallelization during build
 broken_parallel_build = false
+# create vendor archive with cargo
+cargo_vendor = false
 # this package is a library compatibility package and only ships versioned library files
 compat = false
 # set conservative build flags
