--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = sundials
-url = https://github.com/LLNL/sundials/archive/v7.0.0/sundials-7.0.0.tar.gz
+url = https://github.com/LLNL/sundials/archive/v7.1.0/sundials-7.1.0.tar.gz
 archives = 
 giturl = https://github.com/LLNL/sundials.git
 domain = 
@@ -71,6 +71,8 @@ use_avx512 = true
 use_clang = false
 # configure build for lto
 use_lto = true
+# use ninja build files
+use_ninja = false
 # require package verification for build
 verify_required = false
 
